crates/ddlog-syntax/tests/inline/pass/boolean_not.dl
// kind:expr
function foo() {
    !!(!true)
}
