crates/ddlog-syntax/tests/inline/fail/function_arg_without_comma.dl
// kind:item
function foo(bar: Baz bing: Bang) {}
